do not remove-trailing-spaces during paste

BUG: 242723